<resources>
    <string name="app_name">SorelSecretService</string>
    <string name="suspicious_activities_title">Suspicious Activities</string>
    <string name="statistics_title">Statistics</string>
    <string name="create_suspicious_activity_title">Add Behavior</string>
    <string name="statsActivityTitle">Statistics</string>
    <string name="add_suspicious_activity_title">Suspicious Behaviors</string>
    <string name="action_add">New Suspicion</string>
    <string name="actionSave">Save</string>
    <string name="actionCancel">Cancel</string>
    <string name="confidenceLevelHint">Trust Level From 1 to 10</string>
    <string name="promptDelete">Are you sure you want to delete ?</string>
    <string name="actionYes">Yes</string>
</resources>